Ignore the entire pycache file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 geckodriver.log
-__pycache__/searchList.cpython-39.pyc
-__pycache__/seleniumScraper.cpython-39.pyc
-__pycache__/yoinkingTextbooks.cpython-39.pyc
+__pycache__/
